--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <author>Ishita Jain "itsishi@gmailc.com"</author>
 </head>
 <body>
-    
+
 </body>
 </html>
