Try to fix the multiple git user account issue

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <author>Ishita Jain "itsishi@gmailc.com"</author>
+    <title>Scroll Pic Demo</title>
+    <author>Ishita Jain "itsishi@gmail.com"</author>
 </head>
 <body>
 
